[gd_scene load_steps=7 format=3 uid="uid://bpxgt3rbb7fwy"]

[ext_resource type="Script" path="res://characters/player_character/hud.gd" id="1_n2hy3"]
[ext_resource type="Theme" uid="uid://ce6cpfne6646l" path="res://fonts/body_theme.tres" id="2_mjtls"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_1diql"]
resource_local_to_scene = true
load_path = "res://.godot/imported/reticule.png-dede4b0f0dc2de985978a85e9cd7a9ec.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ccw5d"]
resource_local_to_scene = true
load_path = "res://.godot/imported/stamina_vignette.png-21104bbd41dc8d7c3309f3100586a5e7.ctex"

[sub_resource type="Curve" id="Curve_cnevg"]

[sub_resource type="CurveTexture" id="CurveTexture_gbonj"]
curve = SubResource("Curve_cnevg")

[node name="HUD" type="CanvasLayer"]
visible = false
script = ExtResource("1_n2hy3")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_mjtls")

[node name="Reticule" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -2.0
offset_right = 38.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)
texture = SubResource("CompressedTexture2D_1diql")

[node name="StaminaVignette" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CompressedTexture2D_ccw5d")

[node name="UnstuckVignette" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CurveTexture_gbonj")

[node name="TextChatEntry" type="LineEdit" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.5313
offset_top = -52.0
offset_right = 33.5313
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Enter to send"
alignment = 1
max_length = 64
expand_to_text_length = true
